--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^9.9.1"
+    "eslint": "^9.9.1",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.35.2",
+    "globals": "^15.9.0",
+    "typescript-eslint": "^8.4.0"
   }
 }
