--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.106",
-    "@types/react": "^18.3.4",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "jest-fetch-mock": "^3.0.3",
+    "lint": "^0.8.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "eslint": "^9.9.1",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.35.2",
