--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.106",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.7",
     "jest-fetch-mock": "^3.0.3",
     "lint": "^0.8.19",
     "react": "^18.3.1",
