--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Build and Deploy Frontend
 
 on:
   push:
@@ -9,11 +9,11 @@ on:
       - main
 
 jobs:
-  test:
+  build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout frontend repository
         uses: actions/checkout@v3
 
       - name: Set up Node.js
@@ -26,3 +26,26 @@ jobs:
 
       - name: Run tests
         run: yarn test
+
+      - name: Build React app
+        run: yarn build
+
+      - name: Checkout infrastructure repository
+        uses: actions/checkout@v3
+        with:
+          repository: mapleleafjack/me.infrastructure # Replace with your GitHub username
+          path: me.infrastructure
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Initialize Terraform
+        working-directory: ./me.infrastructure
+        run: terraform init
+
+      - name: Apply Terraform
+        working-directory: ./me.infrastructure
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: terraform apply -auto-approve
