--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Checkout infrastructure repository
         uses: actions/checkout@v3
         with:
-          repository: mapleleafjack/me.infrastructure # Replace with your GitHub username
+          repository: mapleleafjack/me.infrastructure
           path: me.infrastructure
 
       - name: Set up Terraform
@@ -50,4 +50,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_db_username: ${{ secrets.TF_VAR_db_username }}
           TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
+          TF_VAR_build_path: "./me.frontend/build"
         run: terraform apply -auto-approve
