--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.78.0",
+    "scss": "^0.2.4",
     "typescript": "^5.5.4",
     "web-vitals": "^2.1.4"
   },
@@ -67,13 +69,16 @@
     },
     "moduleNameMapper": {
       "\\.(css|less|scss|sass)$": "identity-obj-proxy",
-      "^api/(.*)$": "<rootDir>/src/api/$1", 
-      "^Components/(.*)$": "<rootDir>/src/Components/$1", 
-      "^types/(.*)$": "<rootDir>/src/types/$1" 
+      "^api/(.*)$": "<rootDir>/src/api/$1",
+      "^Components/(.*)$": "<rootDir>/src/Components/$1",
+      "^types/(.*)$": "<rootDir>/src/types/$1"
     },
     "setupFilesAfterEnv": [
       "<rootDir>/jest.setup.js"
     ],
-    "moduleDirectories": ["node_modules", "src"] 
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ]
   }
 }
